--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "~2.5.7",
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
+    "ldapauth-fork": "^4.0.2",
     "morgan": "~1.9.0"
   }
 }
