--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "async": "2.0.1",
     "grunt": "1.0.1",
+    "ldapauth-fork": "^4.0.2",
     "sails": "^1.0.1",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
