--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "async": "2.0.1",
+    "cheerio": "^1.0.0-rc.2",
     "grunt": "1.0.1",
     "ldapauth-fork": "^4.0.2",
+    "request": "^2.85.0",
     "sails": "^1.0.1",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
