--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "async": "2.0.1",
     "grunt": "1.0.1",
     "ldapauth-fork": "^4.0.2",
+    "moment": "^2.22.1",
     "node-schedule": "^1.3.0",
+    "request": "^2.85.0",
     "sails": "^1.0.1",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
     "sails-hook-sockets": "^1.4.0",
-    "sails-mysql": "^1.0.0"
+    "sails-mysql": "^1.0.0",
+    "xml-js": "^1.6.2"
   },
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3"
