--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.2",
     "grunt": "1.0.1",
     "ldapauth-fork": "^4.0.2",
+    "node-schedule": "^1.3.0",
     "request": "^2.85.0",
     "sails": "^1.0.1",
     "sails-hook-grunt": "^3.0.2",
