--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
     "sails-hook-sockets": "^1.4.0",
-    "sails-mysql": "^1.0.0"
+    "sails-mysql": "^1.0.0",
+    "xml-js": "^1.6.2"
   },
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3"
