--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "sails-redis": "^1.0.0",
     "async": "2.0.1",
     "cheerio": "^1.0.0-rc.2",
     "grunt": "1.0.1",
