--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
-    "sails-redis": "^1.0.0",
     "async": "2.0.1",
     "cheerio": "^1.0.0-rc.2",
     "grunt": "1.0.1",
@@ -21,11 +20,13 @@
     "node-ical": "^0.6.1",
     "node-schedule": "^1.3.0",
     "request": "^2.85.0",
+    "request-rate-limiter": "^2.0.1",
     "sails": "^1.0.1",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
     "sails-hook-sockets": "^1.4.0",
     "sails-mysql": "^1.0.0",
+    "sails-redis": "^1.0.0",
     "xml-js": "^1.6.2"
   },
   "devDependencies": {
