--- a/package.json
+++ b/package.json
@@ -6,30 +6,34 @@
   "keywords": [],
   "dependencies": {
     "@sailshq/connect-redis": "^3.2.1",
-    "@sailshq/lodash": "^3.10.3",
+    "@sailshq/lodash": "^3.10.4",
     "@sailshq/socket.io-redis": "^5.2.0",
-    "sails-redis": "^1.0.0",
     "async": "2.0.1",
-    "cheerio": "^1.0.0-rc.2",
-    "grunt": "1.0.1",
+    "braces": "^3.0.2",
+    "cheerio": "^1.0.0-rc.3",
+    "grunt": "^1.0.4",
     "ical-date-parser": "^4.0.0",
     "ical2json": "^1.2.0",
-    "ldapauth-fork": "^4.0.2",
-    "moment": "^2.22.1",
+    "ldapauth-fork": "^4.2.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "moment-recur2": "^1.0.0",
-    "moment-timezone": "^0.5.16",
+    "moment-timezone": "^0.5.27",
     "node-ical": "^0.6.1",
-    "node-schedule": "^1.3.0",
-    "request": "^2.85.0",
-    "sails": "^1.0.1",
-    "sails-hook-grunt": "^3.0.2",
-    "sails-hook-orm": "^2.0.0-16",
-    "sails-hook-sockets": "^1.4.0",
-    "sails-mysql": "^1.0.0",
-    "xml-js": "^1.6.2"
+    "node-schedule": "^1.3.2",
+    "request": "^2.88.0",
+    "sails": "^1.2.3",
+    "sails-hook-grunt": "^4.0.1",
+    "sails-hook-orm": "^2.1.1",
+    "sails-hook-sockets": "^2.0.0",
+    "sails-mysql": "^1.0.1",
+    "sails-redis": "^1.0.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "@sailshq/eslint": "^4.19.3"
+    "@sailshq/eslint": "^4.19.3",
+    "grunt-contrib-coffee": "2.1.0",
+    "grunt-contrib-jst": "1.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
